# vision-clip-generator

./: .gitignore  CHANGELOG.md  CLAUDE.md  GenerateVC.py  GoogleGenerateVC.py  LICENSE  README.md  __main__.py  main.py  makefile  pyproject.toml  requirements.txt
.github/: CI_CD_GUIDE.md
.github/workflows/: .staging-promotion.yml.swp  ci.yml  dependency-update.yml  security.yml  staging-promotion.yml
dialogs/: clip.txt  confirmation.txt  customer-support.md  lost-credit-card.txt  medical-appointment.txt  noise.txt  scaled-coginition.txt  wealth.txt
tests/: test_google_generate_vc.py  test_main.py  test_tts_abstraction.py
tts/: __init__.py  base.py  capabilities.py  config.py  factory.py  features.py
tts/providers/: __init__.py  aws_polly.py  azure_tts.py  elevenlabs_tts.py  google_tts.py
